--- a/firmware/baseband/CMakeLists.txt
+++ b/firmware/baseband/CMakeLists.txt
@@ -333,6 +333,13 @@ set(MODE_CPPSRC
 )
 DeclareTargets(PSPE wideband_spectrum)
 
+### Close Call
+
+set(MODE_CPPSRC
+	proc_closecall.cpp
+)
+DeclareTargets(PCLC closecall)
+
 ### OOK
 
 set(MODE_CPPSRC
